@@ -1,5 +1,5 @@
 Package: CAMERA
-Version: 1.3.3
+Version: 1.3.4
 Date: 2009-11-12
 Title: Collection of annotation related methods for mass spectrometry data 
 Author: Carsten Kuhl, Ralf Tautenhahn, Steffen Neumann {ckuhl|rtautenh|sneumann}@ipb-halle.de
